cmake_minimum_required(VERSION 3.8)
project(lab3)

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(std_msgs REQUIRED)

# create and install cpp executables
add_executable(pid_controller src/pid_controller.cpp)
ament_target_dependencies(pid_controller rclcpp, std_msgs)

install(TARGETS
  pid_controller
  DESTINATION lib/${PROJECT_NAME})

# install python modules and executables
ament_python_install_packages(${PROJECT_NAME})

install(PROGRAMS
  move_to_point.py
  DESTINATION lib/${PROJECT_NAME})

# for testing
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
